Add toggle for invite link and add group members

--- a/lib/elixir_splitwise_web/controllers/friendship_html/new.html.heex
+++ b/lib/elixir_splitwise_web/controllers/friendship_html/new.html.heex
@@ -3,7 +3,7 @@
     Add a friend
   </.header>
 
-  <.simple_form :let={f} for={@conn.params} action={~p"/add_friend"}>
+  <.simple_form :let={f} for={@conn.params} action={~p"/friend/add"}>
     <.input field={f[:email]} type="email" label="Email" required />
 
     <:actions>
