--- a/lib/elixir_splitwise_web/controllers/group_html/new.html.heex
+++ b/lib/elixir_splitwise_web/controllers/group_html/new.html.heex
@@ -9,7 +9,10 @@
       Group members 
       <br/>
       <div id="add-members">
-      Tip: Lots of people to add? Send your friends an <button phx-click={show_and_hide("#add-members", "#invite-link")}> invite link.</button>
+        Tip: Lots of people to add? Send your friends an <button phx-click={show_and_hide("#add-members", "#invite-link")}> invite link.</button>
+        <br>
+        <br>
+        <%= @current_user.name %> <%= @current_user.email %>
         <.input field={f[:name]} type="text" placeholder="Name" required />
         <.input field={f[:email]} type="email" placeholder="Email" required />
       </div>
@@ -19,6 +22,11 @@
 
         <button phx-click={show_and_hide("#invite-link", "#add-members")}>Or add group members manually</button>
       </div>
+      <br>
+      <.input field={f[:group_type]} type="select" options={options} label="Group type" required />
+
+      <.input field={f[:simplify_group_debts]} type="checkbox" label="Simplify group debts?" />
+      
       <:actions>
         <.button phx-disable-with="Sending Invite..." class="w-full">Add friend</.button>
       </:actions>
