--- a/lib/elixir_splitwise_web/components/layouts/app.html.heex
+++ b/lib/elixir_splitwise_web/components/layouts/app.html.heex
@@ -1,17 +1,48 @@
 <header>
-  <div class="flex justify-between items-center bg-splitwise-green">
+  <div class="flex justify-between items-center bg-teal-400">
     <a href="/" class="pl-20"><img src={~p"/images/splitwise.png"} alt="Splitwise logo" width="100"></a>
     <%= if @current_user do %>
       <div class="float-right px-10">
-        <span class="pr-5"><%= @current_user.name %></span>
-        <.button_link href={~p"/users/log_out"} method="delete">Log Out</.button_link>
+        <span class="pr-5">
+          <%= @current_user.name %>
+        </span>
+        <.button_link href={~p"/users/log_out"} method="delete" class="bg-teal-700">Log Out</.button_link>
       </div>
-    <% end %>
+      <% end %>
   </div>
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
+<main class="flex h-screen w-full">
+  <div class="w-72 h-full">
+    <div class="px-5 py-5">
+      <div class="flex flex-col gap-y-2">
+        <.link href={~p"/dashboard"}>Dashboard</.link>
+        <.link href={~p"/dashboard"}>All Expenses</.link>
+      </div>
+      <div class="flex mt-7 justify-between bg-slate-300 px-2 py-1">
+        <span>Groups</span>
+        <span class="cursor-pointer">+Add</span>
+      </div>
+      <div class="mt-1">
+        No groups yet
+      </div>
+      <div class="flex mt-4 justify-between bg-slate-300 px-2 py-1">
+        <span>Friends</span>
+        <span class="cursor-pointer">+Add</span>
+      </div>
+      <div class="mt-1">
+        No friends yet
+      </div>
+    </div>
+  </div>
+
+  <div class="w-full h-full  shadow-2xl">
+    <div class="float-right p-5">
+      <.button_link href={~p"/dashboard"} method="get" class="bg-orange-600">Add an Expense</.button_link>
+      <.button_link href={~p"/dashboard"} method="get" class="ml-2 bg-teal-400">Settle Up</.button_link>
+    </div>
+  </div>
+  <!--<div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
-  </div>
+  </div>-->
 </main>
