--- a/lib/elixir_splitwise_web/components/layouts/app.html.heex
+++ b/lib/elixir_splitwise_web/components/layouts/app.html.heex
@@ -30,7 +30,7 @@
         <span class="cursor-pointer" phx-click={show_modal("add_friends")}>+Add</span>
       </div>
       <div class="mt-1">
-        No friends yet
+        <%= friends_list(@current_user) %>
       </div>
     </div>
   </div>
