--- a/lib/elixir_splitwise_web/live/friendship_live.html.heex
+++ b/lib/elixir_splitwise_web/live/friendship_live.html.heex
@@ -1,8 +1,9 @@
-<%= friend_name(@current_user, @friendship_id) %>
-
-<div class="w-full h-full  shadow-2xl">
-    <div class="float-right p-5">
-      <.button_link href={~p"/dashboard"} method="get" class="bg-orange-600">Add an Expense</.button_link>
-      <.button_link href={~p"/dashboard"} method="get" class="ml-2 bg-teal-400">Settle Up</.button_link>
-    </div>
+<div class="w-full h-full shadow-2xl justify-between flex">
+  <div class="p-7">
+    <%= friend_name(@current_user, @friendship_id) %>
   </div>
+  <div class="float-right p-7">
+    <.button_link href={~p"/dashboard"} method="get" class="bg-orange-600">Add an Expense</.button_link>
+    <.button_link href={~p"/dashboard"} method="get" class="ml-2 bg-teal-400">Settle Up</.button_link>
+  </div>
+</div>
