--- a/lib/elixir_splitwise_web/controllers/user_registration_html/new.html.heex
+++ b/lib/elixir_splitwise_web/controllers/user_registration_html/new.html.heex
@@ -15,6 +15,7 @@
       Oops, something went wrong! Please check the errors below.
     </.error>
 
+    <.input field={f[:name]} type="text" label="Name" required />
     <.input field={f[:email]} type="email" label="Email" required />
     <.input field={f[:password]} type="password" label="Password" required />
 
