Update module names and expense context

--- a/lib/elixir_splitwise_web/components/layouts/app.html.heex
+++ b/lib/elixir_splitwise_web/components/layouts/app.html.heex
@@ -45,5 +45,5 @@
     <%= @inner_content %>
   </div>
 
-  <%= live_render(@socket, ElixirSplitwiseWeb.Live.Dashboard.Modals.AddFriend, id: "add_friend") %>
+  <%= live_render(@socket, ElixirSplitwiseWeb.Dashboard.Modals.AddFriend, id: "add_friend") %>
 </main>
