--- a/lib/elixir_splitwise_web/live/expense_live/new.html.heex
+++ b/lib/elixir_splitwise_web/live/expense_live/new.html.heex
@@ -1,4 +1,4 @@
-<.modal :if={@live_action in [:new, :edit]} id="expense-modal" show on_cancel>
+<.modal :if={@live_action in [:new, :edit]} id="expense-modal" show on_cancel={JS.patch(~p"/expenses")}>
     <.live_component
       module={ElixirSplitwiseWeb.ExpenseLive.FormComponent}
       id={@expense.id || :new}
