--- a/lib/elixir_splitwise_web/live/friendship_live.html.heex
+++ b/lib/elixir_splitwise_web/live/friendship_live.html.heex
@@ -9,7 +9,7 @@
   
     <.button_link href={~p"/dashboard"} method="get" class="ml-2 bg-teal-400">Settle Up</.button_link>
   </div>
-  <.modal :if={@live_action in [:add_expense]} id="expense-modal" show on_cancel={JS.patch(@url.path)}>
+  <.modal :if={@live_action in [:add_expense]} id="expense-modal" show on_cancel={JS.navigate(@url.path)}>
     <.live_component
       module={ElixirSplitwiseWeb.ExpenseLive.FormComponent}
       id={@expense.id || :new}
@@ -17,6 +17,7 @@
       action={@live_action}
       expense={@expense}
       patch={~p"/expenses"}
+      name={friend_name(@current_user, @friendship_id)}
     />
   </.modal>
 </div>
