--- a/lib/elixir_splitwise_web/live/friendship_live.html.heex
+++ b/lib/elixir_splitwise_web/live/friendship_live.html.heex
@@ -1,23 +1,11 @@
 <div class="w-full h-full shadow-2xl justify-between flex">
   <div class="p-7">
-    <%= friend_name(@current_user, @friendship_id) %>
   </div>
   <div class="float-right p-7">
-    <.link patch={~p"/expenses/new"}>
-      <.button>New Expense</.button>
-    </.link>
+    <.button phx-click="add_expense"> Add New Expense </.button>
   
     <.button_link href={~p"/dashboard"} method="get" class="ml-2 bg-teal-400">Settle Up</.button_link>
   </div>
-  <.modal :if={@live_action in [:add_expense]} id="expense-modal" show on_cancel={JS.navigate(@url.path)}>
-    <.live_component
-      module={ElixirSplitwiseWeb.ExpenseLive.FormComponent}
-      id={@expense.id || :new}
-      title={@page_title}
-      action={@live_action}
-      expense={@expense}
-      patch={~p"/expenses"}
-      name={friend_name(@current_user, @friendship_id)}
-    />
-  </.modal>
+
+  <%= live_render(IO.inspect(@socket, label: ".............Socket from render"), ElixirSplitwiseWeb.ExpenseLive.Modals.AddExpense, id: "add_expense", session: %{"page_title" => @page_title}) %>
 </div>
